Make sure menu doesn't get covered by the image

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
   position: relative;
 }
 .main-image {
-   z-index: -1;
+   z-index: -999;
    height: auto;
    width: 100%;
    -webkit-transition: opacity 2s ease-in-out;
